k8s/manifests-62bcf3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-62bcf3
  namespace: journee
  labels:
    app: journee-62bcf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-62bcf3
  template:
    metadata:
      labels:
        app: journee-62bcf3
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-62bcf3
          image: gcr.io/my-docker-471807/journee:v5.1.0
          ports:
            - containerPort: 3000
