k8s/manifests-62bcf3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-62bcf3
  namespace: journee
spec:
  selector:
    app: journee-62bcf3
  ports:
    - port: 80
      targetPort: 3000
